Fix SonarLint issues and some ToDo items